--- a/styles.css
+++ b/styles.css
@@ -4,16 +4,20 @@
   box-sizing: border-box;
 }
 
+:root {
+  color-scheme: dark;
+}
+
 body {
   font-family: Arial, Helvetica, sans-serif;
   line-height: 1.5;
 
-  --primary-text-color: #181820;
-  --secondary-text-color: #5c5c62;
-  --durability-text-color: #6a737d9c;
-  --icon-color: #6a737d;
-  --border-color: #ff9a0045;
-  --text-decoration-color: #ff9a00;
+  --primary-text-color: light-dark(#181820, #a2a2b9);
+  --secondary-text-color: light-dark(#5c5c62, #a0a0a6);
+  --durability-text-color: light-dark(#6a737d9c, #f7f8f89c);
+  --icon-color: light-dark(#6a737d, #999fa8);
+  --border-color: light-dark(#ff9a0045, #9ece6a45);
+  --text-decoration-color: light-dark(#ff9a00, #9ece6a);
 }
 
 .container {
@@ -36,8 +40,8 @@ body {
 
 .resume {
   margin: 50px auto;
-  border: 1px solid #f5f5f5;
-  box-shadow: 1px 1px 7px 7px #f5f5f5;
+  border: 1px solid light-dark(#f5f5f5, #000000);
+  box-shadow: 1px 1px 7px 7px light-dark(#f5f5f5, #000000);
   padding: 30px 0;
   max-width: 900px;
 }
