--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -26,6 +26,15 @@ body {
   max-width: 900px;
 }
 
+@keyframes run {
+  from {
+    transform: translateX(0);
+  }
+  to {
+    transform: translateX(100%);
+  }
+}
+
 .fh {
   display: flex;
   flex-direction: row;
@@ -44,7 +53,6 @@ body {
   box-shadow: 1px 1px 7px 7px light-dark(#f5f5f5, #000000);
   padding: 30px 0;
   max-width: 900px;
-  position: relative;
 
   #theme-btn {
     display: grid;
@@ -60,6 +68,7 @@ body {
   border-bottom: 3px solid var(--border-color);
   padding-bottom: 30px;
   margin-bottom: 15px;
+  position: relative;
 }
 
 @media screen and (max-width: 576px) {
