--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -47,12 +47,19 @@ body {
   justify-content: space-between;
 }
 
+#llama {
+  height: 40px;
+  position: absolute;
+  bottom: 0px;
+}
+
 .resume {
   margin: 50px auto;
   border: 1px solid light-dark(#f5f5f5, #000000);
   box-shadow: 1px 1px 7px 7px light-dark(#f5f5f5, #000000);
   padding: 30px 0;
   max-width: 900px;
+  position: relative;
 
   #theme-btn {
     display: grid;
